bpk-lib/crates/macbat/macros/tests/trybuild_negative/event_reserved_category_0xD.stderr
error: category is outside the legal 4-bit custom range
 --> tests/trybuild_negative/event_reserved_category_0xD.rs:3:21
  |
3 | #[batpak(category = 0xD, type_id = 1)]
  |                     ^^^
